examples/type-error/9.j
/* Test the following:
 *  - type error when local method call has unmatched arg/parameter type
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Surface sur;
        println(null);
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        Surface s;
        Int i;
        Void v;
        s = contain(i);

        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }
}
